option java_package = "com.appdynamics.dotnet.machine.config.api";

option java_outer_classname = "DotNetMachineConfigAPI";

message MachineConfig
{
    message IISSite
    {
        optional string displayName = 1;
        repeated IISApplication applicationPath = 2;
        optional int32 portNum = 3;
    }

    message IISApplication
    {
        optional string displayName = 1;
        repeated IISApplication applicationPath = 2;
        optional int32 portNum = 3;
        optional string appPool = 4;
    }

    message ApplicationPool
    {
        optional string poolName = 1;
        optional string runtimeVersion = 2;
    }

    message Service
    {
        optional string displayName = 1;
        optional string type = 2;
    }

    required string machineName = 1;
    required string agentVersion = 2;
    repeated IISSite sites = 3;
    repeated Service services = 4;
    repeated ApplicationPool appPools = 5;
}
